@@ -22,4 +22,14 @@ public class StringUtils {
     return (s == null) || s.isEmpty();
   }
 
+  /**
+   * A "null-safe" equals method.  Returns true if the two provided references are both null, or if they are string-equal.
+   */
+  public static boolean equals(String first, String second) {
+    if (first == null) {
+      return second == null;
+    }
+    return first.equals(second);
+  }
+
 }
